<resources>
    <string name="app_name">Covid19Status</string>

    <string name="last_updated">Last Updated %s</string>
    <string name="total_cases">Total Cases %s</string>
    <string name="total_deaths">Total Deaths %s</string>
    <string name="new_cases">New Cases %s</string>
    <string name="new_deaths">New Deaths %s</string>
    <string name="total_recovered">Total Recovered %s</string>
    <string name="more_details">More Details</string>
    <string name="error_message">Sorry , there was an error getting data</string>
    <string name="no_result">No result</string>
    <string name="serious_cases">Serious Cases %s</string>
    <string name="active_cases">Active Cases %s</string>
    <string name="cases_per_1m">Cases per one million : %s</string>


    <string name="action_search">Search</string>
    <string name="stay_up_to_date">Stay Up to date with the latest stats of the corona virus (Covid19).</string>
    <string name="share">share</string>
    <string name="share_stats">Share Stats of %s</string>
    <string name="share_stats_message">Country: %s\nTotal cases: %s\nTotal Deaths: %s\nNew Cases: %s\nSerious Cases: %s\nNew Deaths: %s\nActive Cases: %s\nTotal Recovered: %s\nCases per one million : %s</string>
    <string name="share_history_message">Country: %s\nTotal cases: %s\nTotal Deaths: %s\nNew Cases: %s\nSerious Cases: %s\nNew Deaths: %s\nActive Cases: %s\nTotal Recovered: %s\nCases per one million : %s\nRecord Date : %s</string>
    <string name="share_stats_world_message">Total cases: %s\nTotal Deaths: %s\nNew Cases: %s\nNew Deaths: %s\nTotal Recovered: %s\nLast updated : %s</string>
    <string name="world_stats">World</string>
    <string name="by_country">By Country</string>
    <string name="history">History</string>

    <string name="choose_a_date">choose a date</string>


    <string name="format_date">yyyy-MM-dd</string>
    <string name="message_required_fields">Please add country and date before starting the search</string>
    <string name="no_data_message">Sorry , there is no available data for this date and country</string>
    <string name="search_history_stats">Search stats by country and date</string>
    <string name="calendar">Calendar</string>

</resources>
