<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.hb.covid19status.model.CountryStat" />

        <variable
            name="itemClickListener"
            type="com.hb.covid19status.ui.list_stats.CountriesItemClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/background_solid_red"
        android:onClick="@{() -> itemClickListener.onCountryItemClicked(item)}">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <View
            android:id="@+id/view_separator_name"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/color_ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_name" />


        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:background="@color/color_ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guideline_vertical50"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical50"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_name" />

        <TextView
            android:id="@+id/tv_country_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@{item.country_name}"
            android:textColor="@color/color_ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="What's new in Android" />

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/view_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_name">

            <TextView
                android:id="@+id/tv_total_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{String.format(@string/total_cases, item.cases)}"
                android:textColor="@color/color_ffffff"
                android:textSize="16sp"
                tools:text="@string/total_cases" />

            <TextView
                android:id="@+id/tv_total_recovered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{String.format(@string/total_recovered, item.total_recovered)}"
                android:textColor="@color/color_ffffff"
                android:textSize="16sp"
                tools:text="@string/total_recovered" />


        </LinearLayout>

        <View
            android:id="@+id/view_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"            android:background="@color/color_ffffff"
            app:layout_constraintBottom_toTopOf="@+id/second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first" />


        <LinearLayout
            android:id="@+id/second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_separator">


            <TextView
                android:id="@+id/tv_total_deaths"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{String.format(@string/total_deaths, item.deaths)}"
                android:textColor="@color/color_ffffff"
                android:textSize="16sp"
                tools:text="@string/total_deaths" />

            <TextView
                android:id="@+id/tv_new_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{String.format(@string/new_cases, item.new_cases)}"
                android:textColor="@color/color_ffffff"
                android:textSize="16sp"
                tools:text="@string/new_cases" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>